# devsloth

./: .travis.yml  Dockerrun.aws.json  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  webpack.config.js
client/: .babelrc  .eslintrc.json  Dockerfile  deploy.js  package-lock.json  package.json  webpack.config.js
server/: .eslintignore  .eslintrc.json  .gitignore  Dockerfile  app.js  dev.Dockerfile  io-server.js  knexfile.js  listen.js  package-lock.json  package.json  test.Dockerfile
services/: docker-compose.yml
services/auth/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  auth.js  config.js  db.js  docker-compose.migrate.yml  docker-compose.test.yml  index.js  knexfile.js  package-lock.json  package.json  routes.js  sqlx-data.json
services/auth/migrations/: 20200823122156_create_account_table.js  20200823154026_create_challenge_table.js  V1__create_challenge_table.sql  V2__create_account_table.sql
services/auth/src/: account.rs  authn.rs  authz.rs  challenge.rs  config.rs  github.rs  main.rs  models.rs
services/auth/src/app/: handlers.rs  mod.rs  routes.rs
services/auth/tests/container_tests/: Dockerfile  auth.test.js  package-lock.json  package.json
services/auth/tests/fake/: Dockerfile  index.js
services/auth/tests/fake_server/: Dockerfile  index.js
services/auth/tests/service_integration/: Dockerfile  auth.test.js  package-lock.json  package.json
src/: index.html  index.js
web/: .prettierrc  Dockerfile  package-lock.json  (+1 more)
(+1128 files in other folders)
