[package]
name = "auth"
version = "0.1.0"
authors = ["Thanh Doan <tmdoan98@gmail.com>"]
edition = "2018"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.0", features = [ "attributes" ] }
chrono = "0.4.15"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.115", features = [ "derive" ] }
serde_json = "1.0.57"
sqlx = { version = "0.4.0-beta.1", features = [ "macros", "offline", "postgres", "uuid" ] }
tide = "0.13.0"
ureq = { version = "1.4.0", features = ["json", "charset"] }